<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/rg_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#dcdcdc"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/shouye"
            android:text="@string/rbtn_1" />

        <RadioButton
            android:id="@+id/rbtn_2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/guanzhu"
            android:text="@string/rbtn_2" />

        <RadioButton
            android:id="@+id/rbtn_3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/jiaoyiguanli"
            android:text="@string/rbtn_3" />

        <RadioButton
            android:id="@+id/rbtn_4"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/my"
            android:text="@string/rbtn_4" />
    </RadioGroup>

</RelativeLayout>