<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_registered_name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_user_name"/>

    <EditText
        android:id="@+id/et_registered_password"
        android:layout_below="@+id/et_registered_name"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_user_password"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_register_sure"
        android:hint="@string/btn_register"
        android:layout_below="@+id/et_registered_password"
        android:layout_width="match_parent"
        android:background="@drawable/fragment_login_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_go_to_login"
        android:layout_below="@+id/btn_register_sure"
        android:layout_marginTop="15dp"
        android:hint="@string/btn_go_to_login_"
        android:background="@drawable/fragment_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>