<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_login_name"
        android:hint="@string/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/et_login_password"
        android:hint="@string/et_user_password"
        android:layout_below="@+id/et_login_name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login_sure"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_login_password"
        android:layout_marginTop="30dp"
        android:background="@drawable/fragment_login_btn"/>

    <Button
        android:id="@+id/btn_go_to_registered"
        android:layout_below="@+id/btn_login_sure"
        android:layout_marginTop="15dp"
        android:hint="@string/btn_go_to_registered"
        android:background="@drawable/fragment_login_btn"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

</RelativeLayout>