<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/et_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_phone"/>

        <EditText
            android:id="@+id/et_user_phone_number"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/phone_number"
            android:background="@null" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_login_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_login_password"/>

        <EditText
            android:id="@+id/et_user_phone_code"
            style="?android:attr/textViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/phone_verification_code"
            android:background="@null" />

        <TextView
            android:id="@+id/tv_get_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_get_phone_vercode"
            android:text="@string/get_phone_verification_code"
            android:textColor="@color/login_area"
            android:layout_marginStart="5dp" />

    </LinearLayout>

</merge>